--- a/confectio-dark-syntax/index.less
+++ b/confectio-dark-syntax/index.less
@@ -1,21 +1,29 @@
-// Atom Syntax Theme: Confectio Dark
+// Atom Syntax Theme: Confectio Light
 
-@import "styles/syntax-variables.less";
-
+// Core -------------------------------------------
+@import (reference) "styles/syntax-variables.less";
 @import "styles/editor.less";
+@import "styles/syntax.less";
 
-@import "styles/syntax/_base.less";
+// Language Support -----------------
 @import "styles/syntax/c.less";
-@import "styles/syntax/cpp.less";
+@import "styles/syntax/clojure.less";
+@import "styles/syntax/coffee.less";
 @import "styles/syntax/cs.less";
 @import "styles/syntax/css.less";
+@import "styles/syntax/elixir.less";
 @import "styles/syntax/gfm.less";
+@import "styles/syntax/glsl.less";
 @import "styles/syntax/go.less";
+@import "styles/syntax/haml.less";
+@import "styles/syntax/haskell.less";
 @import "styles/syntax/html.less";
 @import "styles/syntax/ini.less";
 @import "styles/syntax/java.less";
-@import "styles/syntax/js.less";
+@import "styles/syntax/javascript.less";
 @import "styles/syntax/json.less";
+@import "styles/syntax/php.less";
 @import "styles/syntax/python.less";
 @import "styles/syntax/ruby.less";
+@import "styles/syntax/shell.less";
 @import "styles/syntax/yaml.less";
