--- a/confectio-dark-syntax/styles/syntax/json.less
+++ b/confectio-dark-syntax/styles/syntax/json.less
@@ -1,10 +1,10 @@
 .syntax--source.syntax--json {
   .syntax--meta.syntax--structure.syntax--dictionary.syntax--json {
     & > .syntax--string.syntax--quoted.syntax--json {
-      color: @red;
+      color: @syntax-color-variable;
 
       & > .syntax--punctuation.syntax--string {
-        color: @red-l;
+        color: fade(@syntax-color-variable, @syntax-fade);
       }
     }
   }
@@ -12,15 +12,15 @@
   .syntax--meta.syntax--structure.syntax--dictionary.syntax--json,
   .syntax--meta.syntax--structure.syntax--array.syntax--json {
     & > .syntax--value.syntax--json > .syntax--string.syntax--quoted.syntax--json {
-      color: @green;
+      color: @syntax-color-string;
 
       & > .syntax--punctuation {
-        color: @green-l;
+        color: fade(@syntax-color-string, @syntax-fade);
       }
     }
 
     & > .syntax--constant.syntax--language.syntax--json {
-      color: @cyan;
+      color: @syntax-color-language;
     }
   }
 }
