--- a/confectio-light-syntax/styles/syntax/go.less
+++ b/confectio-light-syntax/styles/syntax/go.less
@@ -1,5 +1,9 @@
 .syntax--source.syntax--go {
+  .syntax--entity.syntax--name.syntax--package {
+    color: @syntax-color-import;
+  }
+
   .syntax--storage.syntax--type.syntax--string {
-      color: @purple;
+      color: @syntax-color-class;
   }
 }
