--- a/confectio-light-syntax/styles/syntax/ini.less
+++ b/confectio-light-syntax/styles/syntax/ini.less
@@ -1,5 +1,5 @@
 .syntax--source.syntax--ini {
   .syntax--keyword.syntax--other.syntax--definition.syntax--ini {
-    color: @red;
+    color: @syntax-color-variable;
   }
 }
