--- a/confectio-dark-syntax/index.less
+++ b/confectio-dark-syntax/index.less
@@ -1,4 +1,4 @@
-// Atom Syntax Theme: Confectio Light
+// Atom Syntax Theme: Confectio Dark
 
 // Core -------------------------------------------
 @import (reference) "styles/syntax-variables.less";
