Pin down the operator color

--- a/confectio-dark-syntax/styles/colors.less
+++ b/confectio-dark-syntax/styles/colors.less
@@ -40,7 +40,7 @@
 @magenta:  hsl(338, 100%, 73%); // #FF77AA <- Magenta
 
 @link:     hsl(214, 100%, 77%); // #88BBFF
-@operator: saturate(lighten(@gray, 15%), 40%); // #6699CC
+@operator: hsl(210,  50%, 73%); // #99BBDD
 
 // Faded Colors ---------------------------
 @red-l:      fade(@red,      60%); // #AD5E60
