Fixed gray appearance

--- a/confectio-dark-syntax/styles/syntax-variables.less
+++ b/confectio-dark-syntax/styles/syntax-variables.less
@@ -39,7 +39,7 @@
 @syntax-color-attribute:    @teal;
 @syntax-color-attribute-id: @orange-2;
 @syntax-color-class:        @orange-2;
-@syntax-color-comment:      @dark-gray;
+@syntax-color-comment:      @gray;
 @syntax-color-constant:     @orange;
 @syntax-color-embedded:     @purple;
 @syntax-color-escape:       @orange;
@@ -53,7 +53,7 @@
 @syntax-color-placeholder:  @orange;
 @syntax-color-preprocessor: @purple-2;
 @syntax-color-primitive:    @yellow;
-@syntax-color-property:     @light-gray;
+@syntax-color-property:     @very-light-gray;
 @syntax-color-punctuation:  @gray;
 @syntax-color-regexp:       @teal;
 @syntax-color-require:      @purple-2;
@@ -65,7 +65,7 @@
 @syntax-color-tag:          @red;
 @syntax-color-type:         @orange-2;
 @syntax-color-unit:         @orange;
-@syntax-color-value:        @gray;
+@syntax-color-value:        @light-gray;
 @syntax-color-variable:     @red;
 
 // Custom Language Entities
