--- a/confectio-dark-syntax/styles/colors.less
+++ b/confectio-dark-syntax/styles/colors.less
@@ -13,12 +13,12 @@
 @syntax-accent: hsl(@syntax-hue, 80%, 67%); // #66AAEE
 
 // Monochrome -----------------------------------
-@mono-1:          hsl(@syntax-hue, 8%, 23%); // default text
+@mono-1:          hsl(@syntax-hue, 8%, 23%);
 @mono-2:          hsl(@syntax-hue, 8%, 38%);
 @mono-3:          hsl(@syntax-hue, 8%, 60%);
 @mono-4:          hsl(@syntax-hue, 8%, 76%);
 
-@very-light-gray: hsl(@syntax-hue, 8%, 84%); // #D3D6D9
+@very-light-gray: hsl(@syntax-hue, 8%, 84%); // #D3D6D9 // default text
 @light-gray:      hsl(@syntax-hue, 8%, 76%); // #BDC2C7
 @gray:            hsl(@syntax-hue, 8%, 60%); // #9199A1
 @dark-gray:       hsl(@syntax-hue, 8%, 38%); // #596169
