gray now less dark

--- a/confectio-dark-syntax/styles/syntax-variables.less
+++ b/confectio-dark-syntax/styles/syntax-variables.less
@@ -24,7 +24,7 @@
 @syntax-gutter-background-color:          lighten(@syntax-bg, 4%);
 @syntax-gutter-background-color-selected: lighten(@syntax-bg, 10%);
 @syntax-gutter-icon-color-folded:         fade(@syntax-fg, 60%);
-@syntax-gutter-text-color:                @dark-gray;
+@syntax-gutter-text-color:                @gray;
 @syntax-gutter-text-color-selected:       lighten(@syntax-gutter-text-color, 12%);
 @syntax-gutter-text-color-subtle:         @syntax-gutter-text-color;
 
