Typescript support added

--- a/confectio-dark-syntax/index.less
+++ b/confectio-dark-syntax/index.less
@@ -26,4 +26,5 @@
 @import "styles/syntax/python.less";
 @import "styles/syntax/ruby.less";
 @import "styles/syntax/shell.less";
+@import "styles/syntax/typescript.less";
 @import "styles/syntax/yaml.less";
